# paper-summarizer

./: .gitignore  LICENSE  Makefile  Paper_Summarizer.py  README.md  pyproject.toml  setup.py
app/core/: article_downloader.py  document_processor.py  embedding_model.py  exceptions.py  llm_service.py  qa_graph.py  qa_service.py  summary_service.py  text_extractor.py
app/web_ui/: processing.py  state.py  summary.py  ui.py
config/: config.py
experiments/: chunk_text.py  config.py  convert_to_markdown.py  download_data.py  embedding_evaluation.py  generate_summaries.py  summary_evaluation.py
pages/: 1_Paper_Q&A.py
results/: embedding_model_evaluation_results.json  summary_evaluation_results.json
src/: config.py
src/core/data_processing/: document_processor.py  text_extractor.py
src/core/graph/: qa_graph.py
src/core/models/: embedding.py  llm.py
src/core/services/: qa_service.py  summary_service.py
src/web_ui/: Paper_Summarizer.py  processing.py  state.py  ui.py
src/web_ui/pages/: 1_Paper_Q&A.py
tests/core/: test_article_dowloader.py  test_document_processor.py  test_embedding_model.py  test_llm_service.py  test_qa_graph.py  test_qa_service.py  test_summary_service.py  test_text_extractor.py
tests/core/data_processing/: test_document_processor.py  test_text_extractor.py
tests/core/graph/: test_qa_graph.py
tests/core/models/: test_embedding.py  test_llm.py
tests/core/services/: test_qa_service.py  test_summary_service.py
