[project]
name = "projekt-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.10.0",
    "langchain-community>=0.3.21",
    "langchain-google-genai>=2.1.3",
    "langchain-huggingface>=0.1.2",
    "marker-pdf>=1.6.2",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.5",
    "streamlit>=1.44.1",
    "torch>=2.6.0",
    "watchdog>=6.0.0",
    "pytest-cov>=6.1.1",
    "langgraph>=0.3.34",
    "langchain-openai>=0.3.14",
    "requests>=2.32.3",
    "langchain-experimental>=0.3.4",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "nltk>=3.9.1",
    "evaluate>=0.4.3",
]

[tool.pytest.ini_options]
filterwarnings =[
    "ignore:Support for class-based `config` is deprecated.*:DeprecationWarning:pydantic.*",
]


[tool.coverage.run]
source = ["app/core"]
